<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/titulo" />

    <TextView
        android:id="@+id/txtRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="76dp"
        android:text="@string/ra"
        app:layout_constraintEnd_toStartOf="@+id/edtRA"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/txtTitulo"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="@+id/txtTitulo"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
        tools:ignore="LabelFor"
        />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/nome"
        app:layout_constraintEnd_toStartOf="@+id/edtNome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRa" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edtRA"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtRA"
        app:layout_constraintTop_toBottomOf="@+id/edtRA"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/chkPraticaEsporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/pratica_esporte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <CheckBox
        android:id="@+id/chkFuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/fuma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkPraticaEsporte" />

    <Spinner
        android:id="@+id/spiEstado"
        android:layout_width="91dp"
        android:layout_height="40dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="16dp"
        android:background="#BCBCBC"
        android:entries="@array/estado"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkFuma" />

    <TextView
        android:id="@+id/txtNumeroFilhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="200dp"
        android:text="@string/numero_filhos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <EditText
        android:id="@+id/edtNumeroFilhos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toEndOf="@+id/txtNumeroFilhos"
        app:layout_constraintTop_toBottomOf="@+id/spiEstado"
        app:layout_constraintVertical_bias="0.418"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="151dp"
        android:layout_height="65dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spiEstado">

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/salvar"
        android:onClick="salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/buscar"
        android:onClick="buscar"
        app:layout_constraintStart_toEndOf="@+id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:onClick="limparCampos"
        android:text="@string/limpar"
        app:layout_constraintStart_toEndOf="@+id/btnBuscar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>

</androidx.constraintlayout.widget.ConstraintLayout>